new proj/src/objects/GE_HQ_Reg_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>Region Matrixs</relationshipLabel>
        <relationshipName>Region_Matrixs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Eff_Dt__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Exp_Dt__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID_Fm__c</fullName>
        <formula>GE_HQ_Country__r.GE_HQ_ISO_Code__c +&apos;-&apos;+ GE_HQ_State__r.GE_HQ_ISO_Code__c +&apos;-&apos;+ GE_HQ_Tier0__c +&apos;-&apos;+ GE_HQ_Tier1__c +&apos;-&apos;+ GE_HQ_Tier2__c +&apos;-&apos;+ GE_HQ_Tier3__c +&apos;-&apos;+ GE_HQ_Tier4__c +&apos;-&apos;+ GE_HQ_Tier5__c + &apos;-&apos; + TEXT(GE_HQ_Region__r.GE_HQ_Function__c) + IF(TEXT(GE_HQ_Status__c) = &apos;Active&apos; , &apos;-&apos; +TEXT(GE_HQ_Status__c),  TEXT(GE_HQ_Eff_Dt__c))</formula>
        <label>External ID Fm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>GE_HQ_Region__c</referenceTo>
        <relationshipLabel>Region Matrixs</relationshipLabel>
        <relationshipName>Region_Matrixs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>GE_HQ_State__c</referenceTo>
        <relationshipLabel>Region Matrixs</relationshipLabel>
        <relationshipName>Region_Matrixs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sub_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Region</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Value is not a Sub Region.</errorMessage>
            <filterItems>
                <field>GE_HQ_Region__c.Parent_Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.GE_HQ_Region__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GE_HQ_Region__c</referenceTo>
        <relationshipLabel>Region Matrixs (Sub Region)</relationshipLabel>
        <relationshipName>Region_Matrixs1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier0__c</fullName>
        <formula>GE_HQ_Region__r.GE_HQ_Derived_Tier_0__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 0 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier1__c</fullName>
        <formula>GE_HQ_Region__r.GE_HQ_Derived_Tier_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier2__c</fullName>
        <formula>GE_HQ_Region__r.GE_HQ_Derived_Tier_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 2 P&amp;L</label>
        <type>Text</type>
    </fields>
    <label>Region Matrix</label>
    <nameField>
        <displayFormat>MATRIX-{00000}</displayFormat>
        <label>Region Matrix ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Matrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GE_HQ_Eff_Dt_Cannot_Be_Set_In_Past</fullName>
        <active>false</active>
        <description>Rule to enforce the requirement that effective dates on Region Matrix records cannot be set in the past. They must be today or future.</description>
        <errorConditionFormula>GE_HQ_Eff_Dt__c  &lt;=Today()</errorConditionFormula>
        <errorDisplayField>GE_HQ_Eff_Dt__c</errorDisplayField>
        <errorMessage>Effective Date cannot be set to the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_HQ_ExpDt_is_greater_than_EffDt</fullName>
        <active>true</active>
        <errorConditionFormula>GE_HQ_Exp_Dt__c  &lt;=  GE_HQ_Eff_Dt__c</errorConditionFormula>
        <errorDisplayField>GE_HQ_Eff_Dt__c</errorDisplayField>
        <errorMessage>Effective Date must be less than or equal to Expiration Date.</errorMessage>
    </validationRules>
</CustomObject>